--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,8 @@ jobs:
       
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v2
+      
+    - name: Build solution
+      run:  #TODO
 
    
